  Rearranged the Options page and added an Updates tab
  Added option to change how often updates are checked
  Open Updates options tab before connecting for the first time
  No longer show About page on first run
  Renamed Quicky toolbar to Quick Connect toolbar
  Changed back to allowing toolbars to dock to the left or right of the menu bar and added gripper to move it around

1.61:
  Removed unlicensed SmartCode Solutions ViewerX VNC Viewer ActiveX
  This version of mRemoteNG does not support VNC

1.60:
  Changed name to mRemoteNG
  Fixed menu bar not staying docked to left side
  Removed snakes game Easter egg
  Removed references to visionapp Remote Desktop
  Changed filename delimiter in title bar from pipe to dash
  Changed default format for saving screenshot images to PNG
  Changed website addresses
  Added Report a Bug and Support Forum links to the Help menu
  Moved Check for Updates to the Help menu
  Changed website links in Help menu and About page to load within mRemoteNG instead of launching an external browser

1.50:
  Added the following formats to the "Save Connections As" function:
    mRemote CSV (standard CSV file with all properties)
    vRD 2008 CSV (standard CSV file with properties relevant for importing connections in vRD 2008)
  Fixed bug in inheritance code (SmartSize Mode and View Only properies were always shown when using VNC)

1.49:
  mRemote and visionapp Remote Desktop 2008 merge!
    Read more here: http://www.mremote.org/wiki/visionappMerge.ashx
    or in the Announcement panel.
  Added features to the update function
  Added Announcement feature
  Changed copyright notice in about screen and text when connecting via VNC
  Fixed some SQL-related problems

V1.48:
  ATTENTION! There is a bug in the automatic update code in 1.45 so you will have to download the new version manually from http://www.mremote.org/wiki/Downloads.ashx
  